# uFlake

./: .gitignore  CMakeLists.txt  C_TO_CPP_ANALYSIS.md  C_TO_CPP_MIGRATION_GUIDE.md  C_TO_CPP_QUICK_REF.md  C_TO_CPP_SUMMARY.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_TASK_FLOODING_ANALYSIS.md  HARDWARE_AUTH_GUIDE.md  KERNEL_WATCHDOG_FIXES.md  QUICK_FIX_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  USB_JTAG_DEBUG_GUIDE.md  WATCHDOG_ARCHITECTURE.md  esp-idf-vscode-generated.gdb  los  partitions.csv  psNotes  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.lvgl.optimized  sdkconfig.old  sdkconfig.security
Apps/: HOWTO_REGISTER_APPS.c  README.md
Apps/counter_app/: CMakeLists.txt  app_main.c  manifest.txt
Apps/counter_app_cpp/: CMakeLists.txt  README.md  app_main.cpp
Apps/gui_app/: CMakeLists.txt  app_main.c
Apps/gui_demo/: CMakeLists.txt  app_main.c
Apps/input_app/: CMakeLists.txt  app_main.c
Apps/input_service/: CMakeLists.txt  input.c  input.h
Apps/launcher/: app_main.c  manifest.txt
Apps/read_ADC/: CMakeLists.txt  app_main.c
Apps/test_app/: CMakeLists.txt  app_main.c
S3ZERO/boot_screen/: CMakeLists.txt  boot_screen.c  unicode.c  unicode.h
S3ZERO/uFlake/: CMakeLists.txt  idf_component.yml  main.cpp
S3ZERO/uFlakeCore/: uFlake.h
S3ZERO/uFlakeHAL/: CMakeLists.txt
S3ZERO/uFlakeHAL/include/: uUART.h
S3ZERO/uFlakeHAL/src/: uI2c.c  uSPI.c  uUART.c
S3ZERO/uFlakeHAL/uI2c/: uI2c.c  uI2c.h
S3ZERO/uFlakeHAL/uSPI/: uSPI.h
tools/: provision_device.py
uAppLoader/: CMakeLists.txt  appLifecycle.c  appLifecycle.h  appLoader.c  appLoader.h  appManifest.c  appManifest.h  appService.c  appService.h
uAppLoader/elfloader/: unaligned.c
uBootScreen/: ANIMATION_GUIDE.md  BRIGHTNESS_CONTROL.md  CMakeLists.txt  COMPARISON.md  EXAMPLES.md  QUICKSTART.md  README.md  integration_example.c  sin_table.h  uBootScreen.c  uBootScreen.h  uBootScreenLVGL.c  uBootScreenLVGL.h
uFlakeCore/: CMakeLists.txt  uFlakeAppReg.c  uFlakeAppReg.h  uFlakeCore.c  uFlakeCore.h
uFlakeHAL/: CMakeLists.txt  uHal.h
uFlakeHAL/include/: uADC.h  uGPIO.h  uNVS.h  uSPI.h
uFlakeHAL/src/: uADC.c  uGPIO.c  uI2c.c  uNVS.c  uSPI.c  uUART.c
uFlakeKernal/: CMakeLists.txt  kernel.c  kernel.h
uFlakeKernal/buffer/: buffer_manager.c  buffer_manager.h
uFlakeKernal/crypto/: crypto_engine.c  crypto_engine.h
uFlakeKernal/event/: event_manager.c  event_manager.h
uFlakeKernal/include/: memory_manager.h  message_queue.h  panic_handler.h  resource_manager.h  scheduler.h  synchronization.h  timer_manager.h  watchdog_manager.h
uFlakeKernal/ipc/: message_queue.c  message_queue.h
uFlakeKernal/logging/: logger.c  logger.h
uFlakeKernal/memory/: memory_manager.c  memory_manager.h
uFlakeKernal/panic/: panic_handler.c  panic_handler.h
uFlakeKernal/resource/: resource_manager.c  resource_manager.h
uFlakeKernal/scheduler/: scheduler.c  scheduler.h
uFlakeKernal/src/: event_manager.c  logger.c  memory_manager.c  message_queue.c  resource_manager.c  scheduler.c  synchronization.c  watchdog_manager.c
uFlakeKernal/sync/: synchronization.c  synchronization.h
uFlakeKernal/timer/: timer_manager.c  timer_manager.h
uFlakeKernal/watchdog/: watchdog_manager.c  watchdog_manager.h
uFlakeKernel/: CMakeLists.txt  kernel.c  kernel.h
uFlakeKernel/include/: crypto_engine.h  hw_auth.h  watchdog_manager.h
uFlakeKernel/src/: buffer_manager.c  crypto_engine.c  event_manager.c  hw_auth.c  message_queue.c  panic_handler.c  scheduler.c  timer_manager.c  watchdog_manager.c
uGraphics/: CMakeLists.txt  README_GUI_SYSTEM.md  image.c  uGui.c  uGui.h
uGraphics/include/: gui_input.h  inputs.h  uGui_appwindow.h  uGui_focus.h  uGui_navigation.h  uGui_notification.h  uGui_theme.h  uGui_types.h  uGui_widgets.h
uGraphics/src/: gui_input.c  inputs.c  uGui_appwindow.c  uGui_focus.c  uGui_navigation.c  uGui_notification.c  uGui_theme.c  uGui_widgets.c
uLibraries/: CMakeLists.txt
uLibraries/imageCodec/: imageCodec.c  imageCodec.h
uLibraries/imageCodec/example/: exampl2.c  sdExample.c
uLibraries/nrf24/: nrf24.c  nrf24.h  nrf24_regs.h
uLibraries/pca9555/: pca9555.c  pca9555.h
uLibraries/pca9555/Example/: example.c
uLibraries/sdCard/: common.h  sdCard.c  sdCard.h  sdRead.c  sdRead.h  sdWrite.c  sdWrite.h
uLibraries/st7789/: README.md  ST7789.c  ST7789.h  ST7789_driver.c  ST7789_driver.h  ST7789_lvgl.c  ST7789_lvgl.h  ST7789_regs.h
uLibraries/st7789/Example/: ST7789_example.c  example.c
uServices/: CMakeLists.txt
uServices/input/: CMakeLists.txt  input.c  input.h
